Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.3.0 Beta1
-
None
-
cfd5a1fb4ed1c51c3dadab0c63820c625992069d (qtdeclarative)
Description
This is a regression against 5.2.x and also since the alpha. The following simple test-case is not instantiable:
import QtQml.Models 2.1 import QtQml 2.0 ListModel { property var foo: QtObject {} }
Attachments
For Gerrit Dashboard: QTBUG-37795 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
81801,1 | Fix instantiation of QML list models with custom object properties | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |