tests/auto/qml/qqmllanguage/tst_qqmllanguage.cpp
@@ -229,6 +229,7 @@ private slots:
 
     void customParserBindingScopes();
     void customParserEvaluateEnum();
+    void customParserProperties();
 
     void preservePropertyCacheOnGroupObjects();
     void propertyCacheInSync();
@@ -3596,6 +3597,20 @@ void tst_qqmllanguage::customParserEvaluateEnum()
     VERIFY_ERRORS(0);
     QScopedPointer<QObject> o(component.create());
     QVERIFY(!o.isNull());
+}
+
+void tst_qqmllanguage::customParserProperties()
+{
+    QQmlComponent component(&engine, testFile("customParserProperties.qml"));
+    VERIFY_ERRORS(0);
+    QScopedPointer<QObject> o(component.create());
+    QVERIFY(!o.isNull());
+    SimpleObjectWithCustomParser *testObject = qobject_cast<SimpleObjectWithCustomParser*>(o.data());
+    QVERIFY(testObject);
+    QCOMPARE(testObject->customBindingsCount(), 0);
+    QCOMPARE(testObject->intProperty(), 42);
+    QCOMPARE(testObject->property("qmlString").toString(), QStringLiteral("Hello"));
+    QVERIFY(!testObject->property("someObject").isNull());
 }
 
 void tst_qqmllanguage::preservePropertyCacheOnGroupObjects()
